@@ -1,3 +1,8 @@
+2008-07-25  Richard Dale  <richard.j.dale@gmail.com>
+
+	* Add implicit conversion operations for converting QVariants to types
+	  that QVariant holds.
+
 2008-07-20  Arno Rehn  <arno@arnorehn.de>
 
 	* Put the classes derived from Marshall in the 'Qyoto' namespace.
